installments payments features engineering

--- a/jupyter/102_EDA_prev_application.ipynb
+++ b/jupyter/102_EDA_prev_application.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "import helpers.view as view\n",
     "import helpers.EDA as EDA\n",
-    "from modules.multi import multi\n",
+    "import modules.multi as multi\n",
     "\n",
     "importlib.reload(view)\n",
     "importlib.reload(EDA)"
@@ -57,6 +57,13 @@
     "\n",
     "    gc.collect()\n",
     "_keep_vars = set(globals().keys())  # lưu biến gốc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# train test prev"
    ]
   },
   {
@@ -110,11 +117,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helpers.config\n",
+    "\n",
     "prev_money_cols = [ 'AMT_ANNUITY', 'AMT_APPLICATION', 'AMT_CREDIT', 'AMT_DOWN_PAYMENT', 'AMT_GOODS_PRICE']\n",
     "prev_rate_cols = ['RATE_DOWN_PAYMENT', 'RATE_INTEREST_PRIMARY', 'RATE_INTEREST_PRIVILEGED']\n",
     "prev_other_cols = ['HOUR_APPR_PROCESS_START', 'SELLERPLACE_AREA']\n",
     "prev_cnt_cols = ['CNT_PAYMENT']\n",
-    "prev_day_cols = ['DAYS_DECISION', 'DAYS_FIRST_DRAWING', 'DAYS_FIRST_DUE', 'DAYS_LAST_DUE_1ST_VERSION', 'DAYS_LAST_DUE', 'DAYS_TERMINATION']"
+    "prev_day_cols = ['DAYS_DECISION', 'DAYS_FIRST_DRAWING', 'DAYS_FIRST_DUE', 'DAYS_LAST_DUE_1ST_VERSION', 'DAYS_LAST_DUE', 'DAYS_TERMINATION'] "
    ]
   },
   {
@@ -275,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_cols = ['SK_ID_CURR', 'AMT_INCOME_TOTAL', 'AMT_CREDIT', 'AMT_ANNUITY', 'AMT_GOODS_PRICE', 'DAYS_BIRTH', 'DAYS_EMPLOYED', 'DAYS_REGISTRATION', 'DAYS_ID_PUBLISH', 'DAYS_LAST_PHONE_CHANGE']"
+    "use_cols = ['SK_ID_CURR', 'AMT_INCOME_TOTAL', 'AMT_CREDIT', 'AMT_ANNUITY', 'AMT_GOODS_PRICE', 'DAYS_BIRTH', 'DAYS_EMPLOYED', 'DAYS_REGISTRATION', 'DAYS_ID_PUBLISH', 'DAYS_LAST_PHONE_CHANGE'] # helpers.config"
    ]
   },
   {
@@ -284,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trte = pd.concat([train, test])[use_cols]"
+    "trte = pd.concat([train, test])[use_cols] # modules.utils.get_trte()"
    ]
   },
   {
@@ -314,8 +323,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helpers.config\n",
+    "\n",
     "app_money_cols = ['app_AMT_INCOME_TOTAL', 'app_AMT_CREDIT', 'app_AMT_ANNUITY', 'app_AMT_GOODS_PRICE']\n",
-    "app_day_cols = ['app_DAYS_BIRTH', 'app_DAYS_EMPLOYED', 'app_DAYS_REGISTRATION', 'app_DAYS_ID_PUBLISH', 'app_DAYS_LAST_PHONE_CHANGE']"
+    "app_day_cols = ['app_DAYS_BIRTH', 'app_DAYS_EMPLOYED', 'app_DAYS_REGISTRATION', 'app_DAYS_ID_PUBLISH', 'app_DAYS_LAST_PHONE_CHANGE'] "
    ]
   },
   {
@@ -324,6 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helpers.config\n",
+    "\n",
     "prev_money_cols = [ 'AMT_ANNUITY', 'AMT_APPLICATION', 'AMT_CREDIT', 'AMT_DOWN_PAYMENT', 'AMT_GOODS_PRICE']\n",
     "prev_rate_cols = ['RATE_DOWN_PAYMENT', 'RATE_INTEREST_PRIMARY', 'RATE_INTEREST_PRIVILEGED']\n",
     "prev_other_cols = ['HOUR_APPR_PROCESS_START', 'SELLERPLACE_AREA']\n",
@@ -513,7 +526,7 @@
    "source": [
     "df_list = []\n",
     "for col in cols:\n",
-    "    df = multi(col)\n",
+    "    df = multi.multi(col)\n",
     "    df_list.append(df)\n",
     "df = pd.concat(df_list, axis=1)"
    ]
@@ -534,7 +547,7 @@
    "outputs": [],
    "source": [
     "# pool = Pool(len(col))\n",
-    "# callback = pd.concat(pool.map(multi, col), axis=1)\n",
+    "# callback = pd.concat(pool.map(multi.multi, col), axis=1)\n",
     "# print(callback.columns.tolist())\n",
     "# pool.close()\n",
     "# df = pd.concat([df, callback], axis=1)"
