--- a/jupyter/402_EDA_pos_cash_balance.ipynb
+++ b/jupyter/402_EDA_pos_cash_balance.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'helpers.EDA' from 'd:\\\\Data Science\\\\helpers\\\\EDA.py'>"
+       "<module 'modules.multi' from 'd:\\\\Data Science\\\\modules\\\\multi.py'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,14 +38,16 @@
     "\n",
     "import helpers.view as view\n",
     "import helpers.EDA as EDA\n",
+    "import modules.multi as multi\n",
     "\n",
     "importlib.reload(view)\n",
-    "importlib.reload(EDA)"
+    "importlib.reload(EDA)\n",
+    "importlib.reload(multi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pos_balance_0['NAME_CONTRACT_STATUS'] = 'Completed' # thay bằng complete để drop duplicate, và tránh chia 0 trong pctchange ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,17 +150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "pos_balance['CNT_INSTALMENT-s-CNT_INSTALMENT_FUTURE'] = pos_balance['CNT_INSTALMENT'] - pos_balance['CNT_INSTALMENT_FUTURE']\n",
-    "pos_balance['CNT_INSTALMENT_FUTURE-d-CNT_INSTALMENT'] = pos_balance['CNT_INSTALMENT_FUTURE'] / pos_balance['CNT_INSTALMENT']"
+    "pos_balance['CNT_INSTALMENT_FUTURE-d-CNT_INSTALMENT'] = pos_balance['CNT_INSTALMENT_FUTURE'] / pos_balance['CNT_INSTALMENT']\n",
+    "\n",
+    "pos_balance['SK_DPD-s-SK_DPD_DEF'] = pos_balance['SK_DPD'] - pos_balance['SK_DPD_DEF']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +172,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Data Science\\modules\\multi.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  ret_diff = ret_diff.rename(f'{c}_diff')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols = ['CNT_INSTALMENT_FUTURE', 'SK_DPD', 'SK_DPD_DEF']\n",
+    "df_list = []\n",
+    "for col in cols:\n",
+    "    df = multi.multi(col, pos_balance)\n",
+    "    df_list.append(df)\n",
+    "df = pd.concat(df_list, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_balance = pd.concat([pos_balance, df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_balance.replace(np.inf, np.nan, inplace=True) \n",
+    "pos_balance.replace(-np.inf, np.nan, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,10 +232,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pos_balance.to_pickle(ROOT + \"/data/processed/f401_pos_balance.p\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SK_ID_PREV</th>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <th>MONTHS_BALANCE</th>\n",
+       "      <th>CNT_INSTALMENT</th>\n",
+       "      <th>CNT_INSTALMENT_FUTURE</th>\n",
+       "      <th>NAME_CONTRACT_STATUS</th>\n",
+       "      <th>SK_DPD</th>\n",
+       "      <th>SK_DPD_DEF</th>\n",
+       "      <th>CNT_INSTALMENT-s-CNT_INSTALMENT_FUTURE</th>\n",
+       "      <th>CNT_INSTALMENT_FUTURE-d-CNT_INSTALMENT</th>\n",
+       "      <th>SK_DPD-s-SK_DPD_DEF</th>\n",
+       "      <th>CNT_INSTALMENT_FUTURE_diff</th>\n",
+       "      <th>CNT_INSTALMENT_FUTURE_pctchange</th>\n",
+       "      <th>SK_DPD_diff</th>\n",
+       "      <th>SK_DPD_pctchange</th>\n",
+       "      <th>SK_DPD_DEF_diff</th>\n",
+       "      <th>SK_DPD_DEF_pctchange</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>158271</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>158271</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.083333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>158271</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000002</td>\n",
+       "      <td>101962</td>\n",
+       "      <td>-54</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000002</td>\n",
+       "      <td>101962</td>\n",
+       "      <td>-53</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520942</th>\n",
+       "      <td>2843499</td>\n",
+       "      <td>314148</td>\n",
+       "      <td>-35</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.017857</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520943</th>\n",
+       "      <td>2843499</td>\n",
+       "      <td>314148</td>\n",
+       "      <td>-34</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.018182</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520944</th>\n",
+       "      <td>2843499</td>\n",
+       "      <td>314148</td>\n",
+       "      <td>-33</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-0.037037</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520945</th>\n",
+       "      <td>2843499</td>\n",
+       "      <td>314148</td>\n",
+       "      <td>-32</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.019231</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520946</th>\n",
+       "      <td>2843499</td>\n",
+       "      <td>314148</td>\n",
+       "      <td>-31</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-51.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9520947 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         SK_ID_PREV  SK_ID_CURR  MONTHS_BALANCE  CNT_INSTALMENT  \\\n",
+       "0           1000001      158271             -10            12.0   \n",
+       "1           1000001      158271              -9            12.0   \n",
+       "2           1000001      158271              -8             2.0   \n",
+       "3           1000002      101962             -54             4.0   \n",
+       "4           1000002      101962             -53             6.0   \n",
+       "...             ...         ...             ...             ...   \n",
+       "9520942     2843499      314148             -35            60.0   \n",
+       "9520943     2843499      314148             -34            60.0   \n",
+       "9520944     2843499      314148             -33            60.0   \n",
+       "9520945     2843499      314148             -32            60.0   \n",
+       "9520946     2843499      314148             -31            10.0   \n",
+       "\n",
+       "        CNT_INSTALMENT_FUTURE NAME_CONTRACT_STATUS  SK_DPD  SK_DPD_DEF  \\\n",
+       "0                        12.0               Active       0           0   \n",
+       "1                        11.0               Active       0           0   \n",
+       "2                         0.0            Completed       0           0   \n",
+       "3                         4.0               Active       0           0   \n",
+       "4                         3.0               Active       0           0   \n",
+       "...                       ...                  ...     ...         ...   \n",
+       "9520942                  55.0               Active       0           0   \n",
+       "9520943                  54.0               Active       0           0   \n",
+       "9520944                  52.0               Active       0           0   \n",
+       "9520945                  51.0               Active       0           0   \n",
+       "9520946                   0.0            Completed       0           0   \n",
+       "\n",
+       "        CNT_INSTALMENT-s-CNT_INSTALMENT_FUTURE  \\\n",
+       "0                                          0.0   \n",
+       "1                                          1.0   \n",
+       "2                                          2.0   \n",
+       "3                                          0.0   \n",
+       "4                                          3.0   \n",
+       "...                                        ...   \n",
+       "9520942                                    5.0   \n",
+       "9520943                                    6.0   \n",
+       "9520944                                    8.0   \n",
+       "9520945                                    9.0   \n",
+       "9520946                                   10.0   \n",
+       "\n",
+       "        CNT_INSTALMENT_FUTURE-d-CNT_INSTALMENT  SK_DPD-s-SK_DPD_DEF  \\\n",
+       "0                                          1.0                    0   \n",
+       "1                                     0.916667                    0   \n",
+       "2                                          0.0                    0   \n",
+       "3                                          1.0                    0   \n",
+       "4                                          0.5                    0   \n",
+       "...                                        ...                  ...   \n",
+       "9520942                               0.916667                    0   \n",
+       "9520943                                    0.9                    0   \n",
+       "9520944                               0.866667                    0   \n",
+       "9520945                                   0.85                    0   \n",
+       "9520946                                    0.0                    0   \n",
+       "\n",
+       "        CNT_INSTALMENT_FUTURE_diff CNT_INSTALMENT_FUTURE_pctchange  \\\n",
+       "0                              NaN                             NaN   \n",
+       "1                             -1.0                       -0.083333   \n",
+       "2                            -11.0                            -1.0   \n",
+       "3                              NaN                             NaN   \n",
+       "4                             -1.0                           -0.25   \n",
+       "...                            ...                             ...   \n",
+       "9520942                       -1.0                       -0.017857   \n",
+       "9520943                       -1.0                       -0.018182   \n",
+       "9520944                       -2.0                       -0.037037   \n",
+       "9520945                       -1.0                       -0.019231   \n",
+       "9520946                      -51.0                            -1.0   \n",
+       "\n",
+       "         SK_DPD_diff  SK_DPD_pctchange  SK_DPD_DEF_diff  SK_DPD_DEF_pctchange  \n",
+       "0                NaN               NaN              NaN                   NaN  \n",
+       "1                0.0               NaN              0.0                   NaN  \n",
+       "2                0.0               NaN              0.0                   NaN  \n",
+       "3                NaN               NaN              NaN                   NaN  \n",
+       "4                0.0               NaN              0.0                   NaN  \n",
+       "...              ...               ...              ...                   ...  \n",
+       "9520942          0.0               NaN              0.0                   NaN  \n",
+       "9520943          0.0               NaN              0.0                   NaN  \n",
+       "9520944          0.0               NaN              0.0                   NaN  \n",
+       "9520945          0.0               NaN              0.0                   NaN  \n",
+       "9520946          0.0               NaN              0.0                   NaN  \n",
+       "\n",
+       "[9520947 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_balance"
+   ]
   }
  ],
  "metadata": {
