--- a/jupyter/202_EDA_installments_payments.ipynb
+++ b/jupyter/202_EDA_installments_payments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[414 rows x 3 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "[13605401 rows x 10 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,14 +588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_20036\\1137191341.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_24076\\1137191341.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,44 +642,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from helpers.config import app_money_cols, app_day_cols"
+    "drop_cols = list(set(list(trte.columns) + [\"CNT_PAYMENT\", \"AMT_ANNUITY\", \"index\"]))\n",
+    "for col in [\"SK_ID_PREV\", \"SK_ID_CURR\"]:\n",
+    "    if col in drop_cols:\n",
+    "        drop_cols.remove(col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['app_AMT_INCOME_TOTAL',\n",
-       " 'app_AMT_CREDIT',\n",
-       " 'app_AMT_ANNUITY',\n",
-       " 'app_AMT_GOODS_PRICE',\n",
-       " 'app_DAYS_BIRTH',\n",
-       " 'app_DAYS_EMPLOYED',\n",
-       " 'app_DAYS_REGISTRATION',\n",
-       " 'app_DAYS_ID_PUBLISH',\n",
-       " 'app_DAYS_LAST_PHONE_CHANGE']"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(app_money_cols + app_day_cols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,16 +691,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "installments.drop(columns=app_money_cols + app_day_cols + [\"CNT_PAYMENT\", \"AMT_ANNUITY\", \"index\"], inplace=True)"
+    "installments.drop(columns=drop_cols, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1262,7 @@
        "[13605401 rows x 27 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
